--- a/notebook.html
+++ b/notebook.html
@@ -826,7 +826,9 @@ summary {
 </ul></li>
 <li>We’re going to write script in text editor</li>
 <li>test it for just one ind before running for all</li>
-<li>can kill scripts with ctrl+C</li>
+<li><p>can kill scripts with ctrl+C</p></li>
+<li>on server: <code>git pull</code> to get scripts we wrote today</li>
+<li><p>to make file executable (if you do <code>ll</code> and the file names aren’t green): <code>chmod u+x *.sh</code></p></li>
 </ul>
 <hr />
 <hr />
