--- a/notebook.html
+++ b/notebook.html
@@ -829,6 +829,7 @@ summary {
 <li><p>can kill scripts with ctrl+C</p></li>
 <li>on server: <code>git pull</code> to get scripts we wrote today</li>
 <li><p>to make file executable (if you do <code>ll</code> and the file names aren’t green): <code>chmod u+x *.sh</code></p></li>
+<li><p>at command prompt with nothing else running: <code>screen</code> and then <code>bash mypipeline.sh</code> and then ctrl+A and then ctrl+D <code>screen -r</code> (remember to detach again with ctrl+A and ctrl+D)</p></li>
 </ul>
 <hr />
 <hr />
