--- a/notebook.html
+++ b/notebook.html
@@ -397,6 +397,17 @@ summary {
 <li><a href="#id-section7">Entry 7: 2020-02-05, Wednesday</a></li>
 <li><a href="#id-section8">Entry 8: 2020-02-10, Monday</a></li>
 <li><a href="#id-section9">Entry 9: 2020-02-12, Wednesday</a></li>
+<li><a href="#id-section10">Entry 10: 2020-02-17, Monday</a></li>
+<li><a href="#id-section11">Entry 11: 2020-02-19, Wednesday</a></li>
+<li><a href="#id-section12">Entry 12: 2020-02-24, Monday</a></li>
+<li><a href="#id-section13">Entry 13: 2020-02-26, Wednesday</a></li>
+<li><a href="#id-section14">Entry 14: 2020-03-02, Monday</a></li>
+<li><a href="#id-section15">Entry 15: 2020-03-4, Wednesday</a></li>
+<li><a href="#id-section16">Entry 16: 2020-03-16, Monday</a></li>
+<li><a href="#id-section17">Entry 17: 2020-03-28, Wednesday</a></li>
+<li><a href="#id-section18">Entry 18: 2020-03-23, Monday</a></li>
+<li><a href="#id-section19">Entry 19: 2020-03-25, Wednesday</a></li>
+<li><a href="#id-section20">Entry 20: 2020-03-30, Monday</a></li>
 </ul>
 <hr />
 <div id="id-section1"></div>
@@ -879,10 +890,14 @@ summary {
 </div>
 <div id="entry-8-2020-02-10-monday" class="section level3">
 <h3>Entry 8: 2020-02-10, Monday</h3>
+<div id="milesi-et-al.-2019" class="section level4">
+<h4>Milesi et al., 2019</h4>
+<p>Assessing the potential for assisted gene flow using past introduction of Norway Spruce in Southern Sweden: Local adaptation and genetic basis of quantitative traits</p>
 <hr />
 <hr />
 <div id="id-section9"></div>
 
+</div>
 </div>
 <div id="entry-9-2020-02-12-wednesday" class="section level3">
 <h3>Entry 9: 2020-02-12, Wednesday</h3>
@@ -893,6 +908,76 @@ summary {
 </div>
 <div id="entry-10-2020-02-17-monday" class="section level3">
 <h3>Entry 10: 2020-02-17, Monday</h3>
+<hr />
+<hr />
+<div id="id-section11"></div>
+
+</div>
+<div id="entry-11-2020-02-19-wednesday" class="section level3">
+<h3>Entry 11: 2020-02-19, Wednesday</h3>
+<hr />
+<hr />
+<div id="id-section12"></div>
+
+</div>
+<div id="entry-12-2020-02-24-monday" class="section level3">
+<h3>Entry 12: 2020-02-24, Monday</h3>
+<hr />
+<hr />
+<div id="id-section13"></div>
+
+</div>
+<div id="entry-13-2020-02-26-wednesday" class="section level3">
+<h3>Entry 13: 2020-02-26, Wednesday</h3>
+<hr />
+<hr />
+<div id="id-section14"></div>
+
+</div>
+<div id="entry-14-2020-03-2-monday" class="section level3">
+<h3>Entry 14: 2020-03-2, Monday</h3>
+<hr />
+<hr />
+<div id="id-section15"></div>
+
+</div>
+<div id="entry-15-2020-03-4-wednesday" class="section level3">
+<h3>Entry 15: 2020-03-4, Wednesday</h3>
+<hr />
+<hr />
+<div id="id-section16"></div>
+
+</div>
+<div id="entry-16-2020-03-16-monday" class="section level3">
+<h3>Entry 16: 2020-03-16, Monday</h3>
+<hr />
+<hr />
+<div id="id-section17"></div>
+
+</div>
+<div id="entry-17-2020-03-18-wednesday" class="section level3">
+<h3>Entry 17: 2020-03-18, Wednesday</h3>
+<hr />
+<hr />
+<div id="id-section18"></div>
+
+</div>
+<div id="entry-18-2020-03-23-monday" class="section level3">
+<h3>Entry 18: 2020-03-23, Monday</h3>
+<hr />
+<hr />
+<div id="id-section19"></div>
+
+</div>
+<div id="entry-19-2020-03-25-wednesday" class="section level3">
+<h3>Entry 19: 2020-03-25, Wednesday</h3>
+<hr />
+<hr />
+<div id="id-section20"></div>
+
+</div>
+<div id="entry-20-2020-03-30-monday" class="section level3">
+<h3>Entry 20: 2020-03-30, Monday</h3>
 <hr />
 </div>
 </div>
