--- a/notebook.html
+++ b/notebook.html
@@ -421,7 +421,7 @@ summary {
 <li>Mathematical Theory</li>
 <li>Classic expectations
 <ul>
-<li>Null odel of Hardy Weinberg equilibrium</li>
+<li>Null model of Hardy Weinberg equilibrium</li>
 </ul></li>
 <li>Genetic drift, sampling effect in finite populations</li>
 <li>Island model, multiple local populations that were divided, but connected to each other through migration
